--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Fabé Dia</title>
+    <title>Company name</title>
     <link rel="icon" href="company-favicon.png" type="image/x-icon" />
   </head>
+
   <body>
     <header>
       <div class="navbar-container">
         <nav class="navbar navbar-expand-lg fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="./index.html"
-              ><strong>Fabé Dia</strong></a
+              ><strong>Company name</strong></a
             >
             <button
               class="navbar-toggler"
@@ -104,7 +105,6 @@
         <a id="section-one"></a>
         <h2 class="french">Chien</h2>
         <h2 class="english">Dog</h2>
-        <img src="#" class="img-fluid profile-pic" alt="Profile picture" />
         <p class="french about-text">
           Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
           molestie turpis ac, dictum mauris. Pellentesque habitant morbi
