work on basic sections, navbar and header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Company name</title>
+    <title>Fabé Dia</title>
     <link rel="icon" href="company-favicon.png" type="image/x-icon" />
   </head>
 
@@ -42,7 +42,7 @@
         <nav class="navbar navbar-expand-lg fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="./index.html"
-              ><strong>Company name</strong></a
+              ><strong>Fabé Dia</strong></a
             >
             <button
               class="navbar-toggler"
@@ -57,66 +57,85 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="french nav-link" href="#section-one">Section1F</a>
-                <a class="english nav-link" href="#section-one">Section1E</a>
-                <a class="french nav-link" href="#section-two">Section2F</a>
-                <a class="english nav-link" href="#section-two">Section2E</a>
-                <a class="french nav-link" href="#section-three">Section3F</a>
-                <a class="english nav-link" href="#section-three">Section3E</a>
-                <a class="french nav-link" href="#section-four">Section4F</a>
-                <a class="english nav-link" href="#section-four">Section4E</a>
+                <a class="french nav-link" href="#section-one">À propos</a>
+                <a class="english nav-link" href="#section-one">About me</a>
+                <a class="nav-link" href="#section-two">Services</a>
+                <a class="french nav-link" href="#section-three">Témoignages</a>
+                <a class="english nav-link" href="#section-three"
+                  >Testimonials</a
+                >
+                <a class="nav-link" href="#section-four">Contact</a>
+                <a class="french nav-link" href="#section-five"
+                  >Galerie d'images</a
+                >
+                <a class="english nav-link" href="#section-five"
+                  >Image gallery</a
+                >
               </div>
             </div>
           </div>
         </nav>
       </div>
-      <h1>Company name</h1>
-      <h2 class="french h2-intro">Bonjour tout le monde</h2>
-      <h2 class="english h2-intro">Hello everyone</h2>
-      <div class="lang-btn-container">
-        <button id="frenchBtn" class="btn-standard">Français 🇫🇷</button>
-        <button id="englishBtn" class="btn-standard">English 🇬🇧</button>
+      <div class="logo">
+        <h1>Fabé Dia Coaching</h1>
       </div>
-      <div class="intro-text-container">
-        <p class="french">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-          <br /><br />Fusce viverra mauris cursus, cursus odio non, luctus
-          tortor. Phasellus turpis ex, porta at pharetra ut, scelerisque eu
-          sapien. Integer maximus, ipsum at tristique faucibus, velit mi varius
-          lacus, vel rutrum metus dolor non mi.
-        </p>
-        <p class="english">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-          <br /><br />Fusce viverra mauris cursus, cursus odio non, luctus
-          tortor. Phasellus turpis ex, porta at pharetra ut, scelerisque eu
-          sapien. Integer maximus, ipsum at tristique faucibus, velit mi varius
-          lacus, vel rutrum metus dolor non mi.
-        </p>
+      <div class="hero">
+        <h2 class="gold french">Transformez votre esprit et votre corps</h2>
+        <h2 class="gold english">Transform your mind and body</h2>
+        <br /><br /><br /><br />
+        <div class="lang-btn-container">
+          <button id="frenchBtn" class="btn-standard">Français 🇫🇷</button>
+          <button id="englishBtn" class="btn-standard">English 🇬🇧</button>
+        </div>
       </div>
     </header>
     <main>
       <section class="about">
         <a id="section-one"></a>
-        <h2 class="french">Chien</h2>
-        <h2 class="english">Dog</h2>
-        <p class="french about-text">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-        </p>
-        <p class="english about-text">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-        </p>
+        <h2 class="french">À propos</h2>
+        <h2 class="english">About me</h2>
+        <div class="about-container">
+          <img
+            class="about-image img-fluid"
+            src="./images/fabe2.jpg"
+            alt="Fabé tying shoe laces"
+          />
+          <p class="french">
+            Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+            molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+            tristique senectus et netus et malesuada fames ac turpis egestas.
+            Vestibulum interdum aliquam nibh, at vulputate est sollicitudin
+            vitae.
+          </p>
+          <p class="english">
+            Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+            molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+            tristique senectus et netus et malesuada fames ac turpis egestas.
+            Vestibulum interdum aliquam nibh, at vulputate est sollicitudin
+            vitae.
+          </p>
+        </div>
+
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/xC5StTlrY0c?si=0R4RZNz43QSUtzxT"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/UJKHEMr1ssY?si=szgU3Ct01AVG1kzZ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
         <button class="french btn-standard btn-color contact-btn">
           <a href="mailto:............."> Contactez-moi</a>
         </button>
@@ -124,15 +143,57 @@
           <a href="mailto:............."> Contact me</a>
         </button>
       </section>
+      <hr />
       <section class="services">
         <a id="section-two"></a>
-        <h2 class="french">Chat</h2>
-        <h2 class="english">Cat</h2>
+        <h2>Services</h2>
+        <p class="french">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
+        <p class="english">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
       </section>
-      <section class="pricing">
+      <hr />
+      <section class="testimonials">
         <a id="section-three"></a>
-        <h2 class="french">Poisson</h2>
-        <h2 class="english">Fish</h2>
+        <h2 class="french">Témoignages</h2>
+        <h2 class="english">Testimonials</h2>
+        <p class="french">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
+        <p class="english">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
+      </section>
+      <hr />
+      <section class="contact">
+        <a id="section-four"></a>
+        <h2 class>Contact</h2>
+        <p class="french">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
+        <p class="english">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
         <button class="french btn-standard btn-color contact-btn">
           <a href="mailto:........."> Contactez-moi</a>
         </button>
@@ -140,14 +201,28 @@
           <a href="mailto:........."> Contact me</a>
         </button>
       </section>
-      <section class="testimonials">
-        <a id="section-four"></a>
-        <h2 class="french">Chevre</h2>
-        <h2 class="english">Goat</h2>
+      <hr />
+      <section class="images">
+        <a id="section-five"></a>
+        <h2 class="french">Galerie d'images</h2>
+        <h2 class="english">Image gallery</h2>
+        <p class="french">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
+        <p class="english">
+          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
+          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada fames ac turpis egestas.
+          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+        </p>
       </section>
     </main>
     <footer>
       <a href="#" target="_blank"><p>Facebook</p></a>
+      <a href="#" target="_blank"><p>Instagram</p></a>
       <a href="#" target="_blank"><p>LinkedIn</p></a>
     </footer>
     <script>
