work on introductory information, images and links

--- a/index.html
+++ b/index.html
@@ -130,6 +130,72 @@
       </div>
     </header>
     <main>
+      <div class="undraw-container">
+        <div>
+          <img
+            class="undraw"
+            src="./images/undraw_personal-training_1s0k.svg"
+            alt="personal trainer"
+          />
+          <h3 class="h3-undraw french">
+            Coaching chez moi :<br />
+            <a
+              class="underline"
+              href="https://maps.app.goo.gl/1DXKrZC3WCs1dzoUA"
+              target="_blank"
+              >Studio Brignoles</a
+            >
+          </h3>
+          <h3 class="h3-undraw english">
+            Coaching at
+            <a
+              class="underline"
+              href="https://maps.app.goo.gl/1DXKrZC3WCs1dzoUA"
+              target="_blank"
+              >my studio</a
+            >
+            in Brignoles
+          </h3>
+        </div>
+        <div>
+          <img
+            class="undraw"
+            src="./images/undraw_fitness-stats_uk0g.svg"
+            alt="training"
+          />
+          <h3 class="h3-undraw french">Coaching chez vous</h3>
+          <h3 class="h3-undraw english">Coaching at your home or workplace</h3>
+        </div>
+        <div>
+          <img class="undraw" src="./images/undraw_team_85hs.svg" alt="team" />
+          <h3 class="h3-undraw french">
+            Entraînement de groupe :<br /><a
+              class="underline"
+              href="https://v-forme.fr/"
+              target="_blank"
+              >V-Forme, Carcès</a
+            ><br /><a
+              class="underline"
+              href="https://www.facebook.com/FREE.RUN.BRIGNOLES/"
+              target="_blank"
+              >Free Run, Brignoles</a
+            >
+          </h3>
+          <h3 class="h3-undraw english">
+            Group training:<br /><a
+              class="underline"
+              href="https://v-forme.fr/"
+              target="_blank"
+              >V-Forme, Carcès</a
+            ><br /><a
+              class="underline"
+              href="https://www.facebook.com/FREE.RUN.BRIGNOLES/"
+              target="_blank"
+              >Free Run, Brignoles</a
+            >
+          </h3>
+        </div>
+      </div>
       <section class="about">
         <a id="section-one"></a>
         <h2 class="french">À propos</h2>
@@ -155,26 +221,53 @@
             alt="Fabé tying shoe laces"
           />
           <p class="about-para french">
-            Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-            molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-            tristique senectus et netus et malesuada fames ac turpis egestas.
+            Bonjour 👋 Je m'appelle Fabé Dia et ... Lorem ipsum cras dictum nunc
+            et nisl aliquet aliquet. Nam ut nulla scelerisque, molestie turpis
+            ac, dictum mauris. Pellentesque habitant morbi tristique senectus et
+            netus et malesuada fames ac turpis egestas. Vestibulum interdum
+            aliquam nibh, at vulputate est sollicitudin vitae.<br /><br />Nam ut
+            nulla scelerisque, molestie turpis ac, dictum mauris. Pellentesque
+            habitant morbi tristique senectus et netus et malesuada fames ac
+            turpis egestas. Vestibulum interdum aliquam nibh, at vulputate est
+            sollicitudin vitae.<br /><br />Nam ut nulla scelerisque, molestie
             Vestibulum interdum aliquam nibh, at vulputate est sollicitudin
-            vitae.
+            vitae.<br /><br />Vous pouvez également visiter mon page de
+            <a
+              class="underline"
+              href="https://fr.wikipedia.org/wiki/Fab%C3%A9_Dia"
+              target="_blank"
+              >Wikipédia.</a
+            >
           </p>
           <p class="about-para english">
-            Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-            molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-            tristique senectus et netus et malesuada fames ac turpis egestas.
-            Vestibulum interdum aliquam nibh, at vulputate est sollicitudin
-            vitae.
+            Hello 👋 My name is Fabé Dia and ... Lorem ipsum cras dictum nunc et
+            nisl aliquet aliquet. Nam ut nulla scelerisque, molestie turpis ac,
+            dictum mauris. Pellentesque habitant morbi tristique senectus et
+            netus et malesuada fames ac turpis egestas. Vestibulum interdum
+            aliquam nibh, at vulputate est sollicitudin vitae.<br /><br />Nam ut
+            nulla scelerisque, molestie turpis ac, dictum mauris. Pellentesque
+            habitant morbi tristique senectus et netus et malesuada fames ac
+            turpis egestas. Vestibulum interdum aliquam nibh, at vulputate est
+            sollicitudin vitae.<br />You can also visit my
+            <a
+              class="underline"
+              href="https://en.wikipedia.org/wiki/Fab%C3%A9_Dia"
+              target="_blank"
+              >Wikipedia</a
+            >
+            page.
           </p>
         </div>
 
-        <button class="french btn-standard btn-color contact-btn">
-          <a href="mailto:............."> Contactez-moi</a>
+        <button
+          class="french btn-standard btn-color contact-btn about-contact-btn"
+        >
+          <a href="mailto:diafabe14@gmail.com"> Contactez-moi</a>
         </button>
-        <button class="english btn-standard btn-color contact-btn">
-          <a href="mailto:............."> Contact me</a>
+        <button
+          class="english btn-standard btn-color contact-btn about-contact-btn"
+        >
+          <a href="mailto:diafabe14@gmail.com"> Contact me</a>
         </button>
       </section>
       <hr />
@@ -182,10 +275,11 @@
         <a id="section-two"></a>
         <h2>Services</h2>
         <p class="french">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
+          Lorem ipsum cras dictum nunc et nisl aliquet aliquet. Nam ut nulla
+          scelerisque, molestie turpis ac, dictum mauris. Pellentesque habitant
+          morbi tristique senectus et netus et malesuada fames ac turpis
+          egestas. Vestibulum interdum aliquam nibh, at vulputate est
+          sollicitudin vitae.
         </p>
         <p class="english">
           Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
@@ -248,23 +342,26 @@
       <section class="contact">
         <a id="section-four"></a>
         <h2 class>Contact</h2>
-        <p class="french">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-        </p>
-        <p class="english">
-          Cras dictum nunc et nisl aliquet aliquet. Nam ut nulla scelerisque,
-          molestie turpis ac, dictum mauris. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum interdum aliquam nibh, at vulputate est sollicitudin vitae.
-        </p>
+        <h3>Fabé Dia</h3>
+        <div class="contact-socials">
+          <a href="https://www.facebook.com/fabe.dia" target="_blank"
+            ><i
+              class="fa-brands fa-square-facebook fa-xl"
+              style="color: #0765ff"
+            ></i
+          ></a>
+          <a href="https://www.instagram.com/fabedia_coaching/" target="_blank"
+            ><i
+              class="fa-brands fa-square-instagram fa-xl"
+              style="color: #e25376"
+            ></i
+          ></a>
+        </div>
         <button class="french btn-standard btn-color contact-btn">
-          <a href="mailto:........."> Contactez-moi</a>
+          <a href="mailto:diafabe14@gmail.com"> Contactez-moi</a>
         </button>
         <button class="english btn-standard btn-color contact-btn">
-          <a href="mailto:........."> Contact me</a>
+          <a href="mailto:diafabe14@gmail.com"> Contact me</a>
         </button>
       </section>
       <hr />
